<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AlgoX</string>
    <string name="signin">SignIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="SignUp" />
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="sell">Sell</string>

    <string name="esgData">
        ESG Score: %1$s \n
        ESG Percentile: %2$s \n
        ESG Performance: %3$s \n
        Environment: %4$s \n
        Social: %5$s \n
        Governance: %6$s
    </string>
    <string name="keyStatistics">
        Market Cap: %1$s \n
        Forward P/E: %2$s \n
        Profit Margin: %3$s \n
        Price/Book: %4$s \n
        Trailing EPS: %5$s \n
        PEG: %6$s
    </string>
    <string name="financialData1">
        Price: %1$s \n
        Recommend: %2$s \n
        Analyst Opinions: %3$s
    </string>
    <string name="financialData2">
        EBITDA: %1$s \n
        Earnings Growth: %2$s \n
        Revenue Growth: %3$s
    </string>


    <string-array name="rules">
        <item>Select Rule</item>
        <item>Price Below</item>
        <item>Price Above</item>
        <item>SMA</item>
        <item>EMA</item>
        <item>Rising</item>
        <item>Falling</item>
    </string-array>

    <string-array name="stockPeriods">
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>

    <string-array name="times">
        <item>1 day</item>
        <item>5 days</item>
        <item>1 month</item>
        <item>3 months</item>
        <item>6 months</item>
        <item>1 year</item>
        <item>5 years</item>
        <item>10 years</item>
        <item>Year to date</item>
        <item>Maximum</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="transaction">Transaction</string>
    <string name="backtesting">Backtesting</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="enhance_your_future">Enhance Your Future</string>
    <string name="clickbutton">ClickButton</string>
    <string name="balance">Balance</string>
    <string name="select_text_view">Select Text View</string>
    <string name="last_name">Last Name</string>
    <string name="logo">logo</string>
    <string name="todo">TODO</string>
    <string name="algoingo">AlgoInfo</string>
    <string name="first_name">First Name</string>
    <string name="profitable_trades_ratio">Profitable Trades Ratio</string>
    <string name="reward_risk">Reward/Risk</string>
    <string name="profit">Profit</string>
    <string name="profitable">Profitable</string>
    <string name="buy_hold">Buy/Hold</string>
    <string name="textview">TextView</string>
    <string name="amount">Amount</string>
    <string name="algo_name">Algo Name</string>
    <string name="total_profit">Total Profit</string>
    <string name="reward_risk_ratio">Reward/Risk Ratio</string>
    <string name="run">run</string>
    <string name="more_info">More Info</string>
    <string name="cancel_algorithm">Cancel Algorithm</string>
    <string name="loading_screen_text">Cooking up some se y algorithms</string>
    <string name="stock">Stock: </string>
    <string name="stockName">stockName</string>
    <string name="algoName">algoName</string>
    <string name="algorithm">Algorithm: </string>
    <string name="date">Date: </string>
    <string name="price">Price: </string>
    <string name="buy">Buy</string>
    <string name="transaction_type">Transaction Type: </string>
    <string name="cancel_text_view">Are you sure you want to stop using this algorithm?"</string>
    <string name="btn_popup_cancel">I\'m sure!</string>
</resources>