<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/btn_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />
    <item
        android:id="@+id/btn_transaction"
        android:icon="@drawable/ic_transaction"
        android:title="@string/transaction"
        />
    <item
        android:id="@+id/btn_algo"
        android:icon="@drawable/ic_backtesting"
        android:title="@string/backtesting"
        />
    <item
        android:id="@+id/btn_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        />
    <item
        android:id="@+id/btn_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        />

</menu>