<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:id="@+id/historyList"
        android:layout_width="366dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="60dp"
                android:layout_height="37dp"
                android:layout_gravity="right"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/newlogo" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/pt_sans"/>

            <TextView
                android:id="@+id/history_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/stockName"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/pt_sans"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:fontFamily="@font/pt_sans">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_type"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/pt_sans"/>

            <TextView
                android:id="@+id/history_transactiontype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/buy"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/pt_sans"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/pt_sans"/>

            <TextView
                android:id="@+id/history_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/pt_sans"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/pt_sans"/>

            <TextView
                android:id="@+id/history_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/pt_sans"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/algorithm"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/pt_sans"/>

            <TextView
                android:id="@+id/history_algorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/algoName"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/pt_sans"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>